@@ -3,7 +3,9 @@ http://svn.edgewall.org/repos/babel/tags/0.9.2/
 (?, from branches/stable/0.9.x)
 
  * Fixed catalogs' charset values not being recognized (ticket #66).
-	
+ * Fixed fuzzy matching when updating message catalogs (ticket #82).
+
+
 Version 0.9.1
 http://svn.edgewall.org/repos/babel/tags/0.9.1/
 (Sep 7 2007, from branches/stable/0.9.x)
